--- a/css/cross_style.css
+++ b/css/cross_style.css
@@ -108,15 +108,22 @@
         max-width: 100%;
     }
 }
-@media screen and (max-width: 767px) {
-    .top_container .top .menu a {
-        margin: 2px 10px;
+@media screen and (max-width: 887px) {
+    .top_container .top {
+        flex-wrap: wrap;
+        justify-content: center;
     }
-    .top_container .top .profile img {
-        margin: 0px 5px;
+}
+@media screen and (max-width: 767px) {
+    .top_container .top {
+        padding: 40px 50px 0;
+    }
+    .top_container .top .menu a {
+        margin: 20px 5px;
     }
     .top_container .main_logo .block1 h1 {
         margin-top: 0;
+        width: 100%;
     }
     .top_container .main_logo .block2 .main_logo_photo {
         max-width: 100%;
@@ -165,6 +172,14 @@
         width: 70%;
     }
 }
+/* @media screen and (max-width: 653px) {
+    .top_container .top {
+        padding: 40px 50px 0;
+    }
+    .top_container .top .menu a {
+        margin: 20px 0px;
+    }
+} */
 @media screen and (max-width: 576px) {
     .top_container .top .menu {
         display: none;
